# xmonad-statusbar-applet

./: .gitignore  AUTHORS  NEWS  README  configure.ac
data/: .gitignore  Makefile.am  XMonadStatusbarApplet.server.in
data/16x16/: Makefile.am
data/22x22/: Makefile.am
data/24x24/: Makefile.am
data/32x32/: Makefile.am
data/48x48/: Makefile.am
data/scalable/: Makefile.am
src/: .gitignore  Makefile.am  applet.c
